anospp allow empty sex, remove excessive contributor validation

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -77,7 +77,7 @@
     "    validate_specimen_id_risk(df)\n",
     "    validate_freetext('IDENTIFIED_HOW', df[~is_blank])\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict)\n",
-    "    validate_values('SEX', df[~is_blank], valid_dict)\n",
+    "    validate_values('SEX', df[~is_blank], valid_dict, na_values = [''])\n",
     "    validate_time('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
@@ -101,9 +101,7 @@
     "    validate_freetext('DNA_EXTRACTION_DESCRIPTION', df)\n",
     "    validate_float('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
     "    validate_float('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
-    "    \n",
-    "    validate_contributors(fn)\n",
-    "        \n",
+    "            \n",
     "    logging.info('# ended started validate_anospp_partner_manifest_v.{}'.format(version))\n",
     "\n",
     "    # TODO yield table ready for STS submission\n",
@@ -139,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20221216_anospp/GOTZ_Anopheles_Metadata_Manifest_V4.0-Ifakara revised191222.xlsx'\n",
+    "fn = '../results/20230209_anospp_omol/Anopheles_Metadata_Manifest_V4.0_EKUW - 15.02.2023.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
