reset series if plate only entries present, add test cases, remove execution from common functions notebook

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
     "%run validate_partner_manifest_dev.ipynb"
    ]
   },
@@ -18,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_bioscan(fn, gal='Sanger Institute', template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "def validate_bioscan(fn, gal='Sanger Institute', template_fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
     "                     verbose=False, bioscan_version='2.0', validation_version='0.1.0',\n",
     "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', write_sts=True):\n",
     "    '''\n",
@@ -100,9 +99,9 @@
     "    return df\n",
     "\n",
     "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
-    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
     "                      gal='Sanger Institute',\n",
-    "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
     "                      verbose=True,\n",
     "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
     "                      write_sts=True)"
@@ -125,24 +124,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20221018_biosc_test/NBGW-2206-Manifest-V2.0.xlsx'\n",
-    "df = validate_bioscan(fn, samples_sheet='Metadata Entry', contrib_sheet='TAB1 Contributors')"
+    "fn = '../results/20230217_b_plate/FACE_BIOSCAN_Manifest_20230215.xlsx'\n",
+    "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e100a8f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05b5b9f4",
+   "id": "9ab3e92a",
    "metadata": {},
    "outputs": [],
    "source": []
