--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -56,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anospp_fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'"
+    "anospp_fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
+    "biosc_fn = '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'"
    ]
   },
   {
@@ -85,7 +86,8 @@
     "                       sheet_name=sheet)\n",
     "        \n",
     "    return df\n",
-    "df = get_data(anospp_fn, sheet='TAB 3 TEST Metadata Entry')"
+    "\n",
+    "# df = get_data(anospp_fn, sheet='TAB 3 TEST Metadata Entry')"
    ]
   },
   {
@@ -117,7 +119,7 @@
     "        \n",
     "    return df\n",
     "        \n",
-    "df = validate_series(df)"
+    "# df = validate_series(df)"
    ]
   },
   {
@@ -136,8 +138,10 @@
     "            ranges.append(f'{b[0][1]}-{b[-1][1]}')\n",
     "        else:\n",
     "            ranges.append(f'{b[0][1]}')\n",
+    "            \n",
     "    return ', '.join(ranges)\n",
-    "index_ranges(df)"
+    "\n",
+    "# index_ranges(df)"
    ]
   },
   {
@@ -155,16 +159,8 @@
     "            df[col] = df[col].str.strip()\n",
     "            \n",
     "    return df\n",
-    "df = remove_trailing_spaces(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template_df = get_data(anospp_fn, sheet='TAB 2 Metadata Entry')"
+    "\n",
+    "# df = remove_trailing_spaces(df)"
    ]
   },
   {
@@ -184,7 +180,8 @@
     "        logging.warning('extra columns in filled manifest compared to template: {}'.format(data_cols - template_cols))\n",
     "    if template_cols - data_cols != set():\n",
     "        logging.error('template columns missing from filled manifest: {}'.format(template_cols - data_cols))\n",
-    "check_columns(df, template_df)"
+    "\n",
+    "# check_columns(df, template_df)"
    ]
   },
   {
@@ -203,7 +200,8 @@
     "        valid_dict[col] = valid_df[col].dropna().to_list()\n",
     "    \n",
     "    return valid_dict\n",
-    "valid_dict = get_valid_dict(anospp_fn, validation_sheet='TAB 5 Data Validation - do not ')"
+    "\n",
+    "# valid_dict = get_valid_dict(anospp_fn, validation_sheet='TAB 5 Data Validation - do not ')"
    ]
   },
   {
@@ -221,7 +219,7 @@
     "        return series[~no_data]\n",
     "    return series\n",
     "    \n",
-    "exclude_missing(df['TIME_OF_COLLECTION'], na_values=['NOT_COLLECTED',''])"
+    "# exclude_missing(df['TIME_OF_COLLECTION'], na_values=['NOT_COLLECTED',''])"
    ]
   },
   {
@@ -274,7 +272,7 @@
     "        \n",
     "    return df\n",
     "        \n",
-    "contrib_df = validate_contributors(anospp_fn)"
+    "# contrib_df = validate_contributors(anospp_fn)"
    ]
   },
   {
@@ -323,7 +321,6 @@
     "        # put “PLATE_ONLY” in well \n",
     "        # and use only one row to capture the metadata for the whole plate\n",
     "        if bioscan and (pdf[well_col] == 'PLATE_ONLY').any():\n",
-    "            # elevate to warning\n",
     "            logging.warning(f'found PLATE_ONLY plate {plate}, expanding to well-level')\n",
     "            if pdf.shape[0] > 1:\n",
     "                logging.error(f'too many rows in PLATE_ONLY plate {plate}, expected one')\n",
@@ -337,27 +334,29 @@
     "                elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
     "                                 'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
     "                    pdf[col].iloc[-1]=''\n",
+    "            #print(pdf.iloc[-3:,:3])\n",
     "        # check for well duplicates\n",
     "        dup_wells =  pdf[well_col].duplicated()\n",
     "        if dup_wells.any():\n",
     "            logging.error(f'duplicate {well_col} for plate {plate}: {pdf.loc[dup_wells, well_col].unique()}')\n",
     "        # check for non A1...H12 wells\n",
-    "        observed_wells = set(pdf[well_col])\n",
-    "        expected_wells = set(expected_wells)\n",
-    "        if observed_wells != expected_wells:\n",
-    "            logging.error(f'in {well_col} for plate {plate}, wells {expected_wells - observed_wells} '\n",
-    "                          f'are missing, wells {observed_wells - expected_wells} are excessive')\n",
+    "        observed_wells_set = set(pdf[well_col])\n",
+    "        expected_wells_set = set(expected_wells)\n",
+    "        if observed_wells_set != expected_wells_set:\n",
+    "            logging.error(f'in {well_col} for plate {plate}, wells {expected_wells_set - observed_wells_set} '\n",
+    "                          f'are missing, wells {observed_wells_set - expected_wells_set} are excessive')\n",
     "        pdfs.append(pdf)\n",
     "    \n",
-    "    if bioscan:\n",
-    "        df = pd.concat(pdfs)\n",
+    "    if bioscan and (df[well_col] == 'PLATE_ONLY').any():\n",
+    "        df = pd.concat(pdfs).reset_index(drop=True)\n",
+    "        df.index.name = 'SERIES'\n",
     "    logging.info(f'found {df.shape[0]} samples across {df[plate_col].nunique()} plates')\n",
     "    \n",
     "    \n",
     "    \n",
     "    return df\n",
     "        \n",
-    "df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')"
+    "# df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')"
    ]
   },
   {
@@ -394,9 +393,10 @@
     "    \n",
     "    \n",
     "    return is_blank\n",
-    "print(df.shape)\n",
-    "is_blank = check_blanks(df)\n",
-    "print(df[~is_blank].shape)"
+    "\n",
+    "# print(df.shape)\n",
+    "# is_blank = check_blanks(df)\n",
+    "# print(df[~is_blank].shape)"
    ]
   },
   {
@@ -443,7 +443,7 @@
     "#     else:\n",
     "#         logging.info('all values valid in {!r}'.format(col))\n",
     "            \n",
-    "validate_values('ORGANISM_PART', df, valid_dict, sep=\" | \", na_values=[], level='e')"
+    "# validate_values('ORGANISM_PART', df, valid_dict, sep=\" | \", na_values=[], level='e')"
    ]
   },
   {
@@ -483,7 +483,8 @@
     "            valid_date_series[old_dates].to_list()))\n",
     "    \n",
     "    return valid_date_series\n",
-    "validate_date('DATE_OF_COLLECTION', df, na_values=[])"
+    "\n",
+    "# validate_date('DATE_OF_COLLECTION', df, na_values=[])"
    ]
   },
   {
@@ -511,7 +512,8 @@
     "    valid_time_series = time_series[~time_series.isna()]\n",
     "    \n",
     "    return valid_time_series\n",
-    "validate_time('TIME_OF_COLLECTION', df, na_values=[''])"
+    "\n",
+    "# validate_time('TIME_OF_COLLECTION', df, na_values=[''])"
    ]
   },
   {
@@ -558,7 +560,7 @@
     "    return valid_time_period_series\n",
     "\n",
     "# df.loc[1,'DURATION_OF_COLLECTION'] = 'PVT1H'\n",
-    "validate_time_period('DURATION_OF_COLLECTION', df, na_values=['']);\n",
+    "# validate_time_period('DURATION_OF_COLLECTION', df, na_values=['']);\n",
     "# df['DURATION_OF_COLLECTION']"
    ]
   },
@@ -668,8 +670,8 @@
     "    # location data can be re-used, e.g. as an additional field\n",
     "    return loc_df_complete\n",
     "# df.loc[2,'DECIMAL_LATITUDE'] = '65'\n",
-    "loc_test = validate_country_and_coordinates(df, anospp_fn)\n",
-    "loc_test"
+    "# loc_test = validate_country_and_coordinates(df, anospp_fn)\n",
+    "# loc_test"
    ]
   },
   {
@@ -831,7 +833,7 @@
     "    return df\n",
     "        \n",
     "                \n",
-    "validate_taxonomy(df, ncbi, anospp=True)"
+    "# validate_taxonomy(df, ncbi, anospp=True)"
    ]
   },
   {
@@ -853,7 +855,8 @@
     "    \n",
     "    if invalid_risk.any():\n",
     "        logging.error(f'SPECIMEN_IDENTITY_RISK should be Y in SERIES {index_ranges(df.loc[invalid_risk])}')\n",
-    "validate_specimen_id_risk(df)"
+    "\n",
+    "# validate_specimen_id_risk(df)"
    ]
   },
   {
@@ -877,7 +880,9 @@
     "            float(val)\n",
     "        except:\n",
     "            logging.error(f'found non-numeric value in {col}: \"{val}\"')\n",
-    "validate_float('ELEVATION', df, na_values=[''])"
+    "            \n",
+    "            \n",
+    "# validate_float('ELEVATION', df, na_values=[''])"
    ]
   },
   {
@@ -903,7 +908,8 @@
     "        logging.warning('found non-standard characters in column {}, SERIES {}. Regex: \"{}\"'.format(\n",
     "        col, index_ranges(series.loc[~is_valid_freetext]), regex))\n",
     "\n",
-    "validate_freetext('IDENTIFIED_HOW', df)"
+    "        \n",
+    "# validate_freetext('IDENTIFIED_HOW', df)"
    ]
   },
   {
@@ -912,8 +918,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bd = validate_date('DATE_OF_COLLECTION', df)\n",
-    "ad = validate_date('DATE_OF_PRESERVATION', df)"
+    "# bd = validate_date('DATE_OF_COLLECTION', df)\n",
+    "# ad = validate_date('DATE_OF_PRESERVATION', df)"
    ]
   },
   {
@@ -932,7 +938,9 @@
     "    if date_conflict.any():\n",
     "        logging.error(f'{before.name} values are later than {after.name} for SERIES'\n",
     "                      f' {index_ranges(ctdf[date_conflict])}')\n",
-    "compare_dates(bd, ad)"
+    "\n",
+    "        \n",
+    "# compare_dates(bd, ad)"
    ]
   },
   {
@@ -964,7 +972,8 @@
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
     "    \n",
     "    return df\n",
-    "add_sts_cols(df, contrib_df, gal='Sanger Institute');"
+    "\n",
+    "# add_sts_cols(df, contrib_df, gal='Sanger Institute');"
    ]
   },
   {
