terminate safely if no samples

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -62,6 +62,9 @@
     "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
+    "    if df[~is_blank].shape[0] == 0:\n",
+    "        logging.error('no non-blank samples to validate, terminating')\n",
+    "        return df\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    # columns below validated for non-blank samples only\n",
@@ -133,18 +136,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "418da3cc",
+   "id": "7b19a5ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230209_anospp_omol/Anopheles_Metadata_Manifest_V4.0_EKUW - 15.02.2023.xlsx'\n",
+    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 21.06.2023.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b19a5ad",
+   "id": "ef9d3afc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 27.06.2023 - historical samples.xlsx'\n",
+    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d6ae96",
    "metadata": {},
    "outputs": [],
    "source": []
