--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -50,6 +50,9 @@
     "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
+    "    if df[~is_blank].shape[0] == 0:\n",
+    "        logging.error('no non-blank samples to validate, terminating')\n",
+    "        return df\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    # columns below validated for non-blank samples only\n",
