remove excessive errors/warnings based on new rules

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -32,8 +32,6 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
-    "    # exclude empty series\n",
-    "    df = validate_series(df)\n",
     "    df = remove_trailing_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
@@ -48,6 +46,8 @@
     "    # orange cols\n",
     "    validate_freetext('CATCH_LOT', df, na_values=[])\n",
     "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
+    "    # check series\n",
+    "    df = validate_series(df)\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
