--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -288,7 +288,7 @@
     "    \n",
     "    empty_rows = (df[plate_col] == '') | (df[well_col] == '')\n",
     "    if empty_rows.any():\n",
-    "        logging.error(f'Found and excluded {empty_rows.sum()} empty rows based on {plate_col} and {well_col}')\n",
+    "        logging.warning(f'Found and excluded {empty_rows.sum()} empty rows based on {plate_col} and {well_col}')\n",
     "        df = df.loc[~empty_rows]\n",
     "        \n",
     "    # plate names validation\n",
@@ -350,7 +350,7 @@
     "    if bioscan and (df[well_col] == 'PLATE_ONLY').any():\n",
     "        df = pd.concat(pdfs).reset_index(drop=True)\n",
     "        df.index.name = 'SERIES'\n",
-    "    logging.info(f'found {df.shape[0]} samples across {df[plate_col].nunique()} plates')\n",
+    "    logging.warning(f'found {df.shape[0]} samples across {df[plate_col].nunique()} plates')\n",
     "    \n",
     "    \n",
     "    \n",
@@ -905,7 +905,7 @@
     "    \n",
     "    is_valid_freetext = series.str.match(regex)\n",
     "    if not is_valid_freetext.all():\n",
-    "        logging.warning('found non-standard characters in column {}, SERIES {}. Regex: \"{}\"'.format(\n",
+    "        logging.info('found non-standard characters in column {}, SERIES {}. Regex: \"{}\"'.format(\n",
     "        col, index_ranges(series.loc[~is_valid_freetext]), regex))\n",
     "\n",
     "        \n",
