--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -22,12 +22,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a4be200",
+   "id": "5cf6528a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def validate_anospp(fn, template_fn='../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx', \n",
-    "                    verbose=False, version='4.0', samples_sheet='TAB 2 Metadata Entry',\n",
+    "                    verbose=False, samples_sheet='TAB 2 Metadata Entry',\n",
     "                    contrib_sheet='TAB 1 Contributors'):\n",
     "    '''\n",
     "    ANOSPP partner manifest validation\n",
@@ -36,7 +36,7 @@
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.info(f'# started validate_anospp_partner_manifest_v.{version}')\n",
+    "    logging.warning(f'# started validate_anospp_partner_manifest_v.{ANOSPP_VERSION}')\n",
     "    logging.warning(f'# manifest {fn}')\n",
     "\n",
     "    # read data\n",
@@ -104,7 +104,7 @@
     "    validate_float('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
     "    validate_float('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
     "            \n",
-    "    logging.info('# ended started validate_anospp_partner_manifest_v.{}'.format(version))\n",
+    "    logging.warning('# ended started validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
     "\n",
     "    # TODO yield table ready for STS submission\n",
     "    return df"
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 21.06.2023.xlsx'\n",
+    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 28.06.2023 - antivec samples.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
