--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -18,8 +18,8 @@
    "outputs": [],
    "source": [
     "def validate_bioscan(fn, gal='Sanger Institute', template_fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
-    "                     verbose=False, bioscan_version='2.0', validation_version='0.1.0',\n",
-    "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', write_sts=True):\n",
+    "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
+    "                     verbose=False, write_sts=True):\n",
     "    '''\n",
     "    BIOSCAN partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
@@ -27,7 +27,7 @@
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.info(f'# started validate_bioscan_partner_manifest_v.{bioscan_version}')\n",
+    "    logging.warning(f'# started validate_bioscan_partner_manifest_v.{BIOSCAN_VERSION}')\n",
     "    logging.warning(f'# manifest {fn}')\n",
     "\n",
     "    # read data\n",
@@ -95,9 +95,9 @@
     "    \n",
     "    df = add_sts_cols(df, contrib_df, gal=gal)\n",
     "    if write_sts:\n",
-    "        write_sts_manifest(df, fn, validation_version)\n",
+    "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "        \n",
-    "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(bioscan_version))\n",
+    "    logging.warning('# ended validate_bioscan_partner_manifest_v.{}'.format(BIOSCAN_VERSION))\n",
     "\n",
     "    return df\n",
     "\n",
