--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -34,6 +34,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "VALIDATION_VERSION = '0.1.0'\n",
+    "ANOSPP_VERSION = '4.0'\n",
+    "BIOSCAN_VERSION = '2.0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "logging.getLogger().setLevel(logging.INFO)\n",
     "# logging.getLogger().setFormat('[%(levelname)s] %(message)s')\n",
     "\n",
