clean up non-breaking spaces

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf6528a",
+   "id": "59815441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,9 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    # clean up data\n",
     "    df = remove_trailing_spaces(df)\n",
+    "    df = remove_nonbreaking_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
     "    ncbi = ete3.NCBITaxa()\n",
