--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -32,7 +32,9 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    # clean up data\n",
     "    df = remove_trailing_spaces(df)\n",
+    "    df = remove_nonbreaking_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
     "    ncbi = ete3.NCBITaxa()\n",
