--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -180,6 +180,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def remove_nonbreaking_spaces(df):\n",
+    "    for col in df.columns:\n",
+    "        nonbreaking_spaces = df[col].str.contains(u\"\\u00A0\")\n",
+    "        if nonbreaking_spaces.any():\n",
+    "            logging.warning('non-breaking spaces found in column {!r}, SERIES {}. Removing for validation'.format(col,\n",
+    "                index_ranges(df.loc[nonbreaking_spaces])))\n",
+    "            df[col] = df[col].str.replace(u\"\\u00A0\", \" \")\n",
+    "            \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def check_columns(df, template_df):\n",
     "    \n",
     "    logging.info('checking manifest columns against template')\n",
