taxonomy only in harbach - warning

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -765,11 +765,14 @@
     "        \n",
     "        unmatched_names = set(tax_names) - set(tax_info[tax_level].keys())\n",
     "        if len(unmatched_names) > 0:\n",
-    "            logging.error(f'{tax_level}: {unmatched_names} not found in NCBI Taxonomy')\n",
     "            if tax_level == 'species' and anospp:\n",
     "                for sp in unmatched_names:\n",
     "                    if sp in harbach_spp:\n",
-    "                        logging.error(f'{tax_level}: \"{sp}\" found in Harbach list, but not in NCBI Taxonomy')\n",
+    "                        logging.warning(f'{tax_level}: \"{sp}\" found in Harbach list, but not in NCBI Taxonomy')\n",
+    "                    else:\n",
+    "                        logging.error(f'{tax_level}: \"{sp}\" not found in both Harbach list and NCBI Taxonomy')\n",
+    "            else:\n",
+    "                logging.error(f'{tax_level}: {unmatched_names} not found in NCBI Taxonomy')\n",
     "        \n",
     "        expected_rank = tax_level\n",
     "        \n",
