--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -328,13 +328,13 @@
     "    # check plate name prefixes prefixes\n",
     "    plate_prefixes = plates.str.slice(0,4)\n",
     "    if bioscan:\n",
-    "        # todo read partners table\n",
+    "        # todo read partners table to feed GAL\n",
     "        partners_df = pd.read_csv('../data/bioscan_partners.tsv', sep='\\t', dtype=str)\n",
     "        unknown_prefixes = (~plate_prefixes.isin(partners_df['partner_code']))\n",
     "    else:\n",
     "        unknown_prefixes = (~plate_prefixes.isin(contrib_df['PARTNER_CODE']))\n",
     "    if unknown_prefixes.any():\n",
-    "        logging.error(f'plate name prefixes not recognised for {plates[unknown_prefixes].to_list()}')\n",
+    "        logging.error(f'plate ID prefixes not recognised for {plates[unknown_prefixes].to_list()}')\n",
     "        \n",
     "    # add 96-well plate well IDs to validation\n",
     "    row_id = list('ABCDEFGH')\n",
@@ -407,16 +407,16 @@
     "    # last well of plate expected to be blank\n",
     "    non_blank_last_well_df = non_blank_df[non_blank_df['TUBE_OR_WELL_ID'] == 'H12']\n",
     "    if non_blank_last_well_df.shape[0] > 0:\n",
-    "        logging.error('last well H12 is not blank at SERIES {}: in ORGANISM_PART, '\n",
-    "                      'expected \"NOT_APPLICABLE\", found {}. '\n",
-    "                      'These samples will be included in further analysis.'.format(\n",
-    "                        index_ranges(non_blank_last_well_df),\n",
-    "                        non_blank_last_well_df.ORGANISM_PART.to_list()\n",
-    "        ))\n",
+    "        logging.error(f'last well H12 is not blank at SERIES {index_ranges(non_blank_last_well_df)}: '\n",
+    "                      f'in ORGANISM_PART, expected \"NOT_APPLICABLE\", '\n",
+    "                      f'found {non_blank_last_well_df.ORGANISM_PART.to_list()}, '\n",
+    "                      f'these samples will be included in further analysis',\n",
+    "                        \n",
+    "        )\n",
     "    \n",
     "    # raise to warning for sanity check\n",
-    "    logging.warning('{} blanks located across {} plates, {} samples of {} left for downstream analysis'.format(\n",
-    "        is_blank.sum(), df.RACK_OR_PLATE_ID.nunique(), non_blank_df.shape[0], df.shape[0]))\n",
+    "    logging.warning(f'{is_blank.sum()} blanks located across {df.RACK_OR_PLATE_ID.nunique()} plates, '\n",
+    "                    f'{non_blank_df.shape[0]} samples of {df.shape[0]} left for downstream analysis')\n",
     "    \n",
     "    \n",
     "    return is_blank\n",
@@ -460,7 +460,7 @@
     "    invalid_values = col_values - valid_values\n",
     "    \n",
     "    if len(invalid_values) > 0:\n",
-    "        msg = 'invalid values in {!r}: {}'.format(col, invalid_values)\n",
+    "        msg = f'invalid values in {col}: {invalid_values}'\n",
     "        if level == 'i':\n",
     "            logging.info(msg)\n",
     "        elif level == 'w':\n",
@@ -493,21 +493,21 @@
     "    # empty string converted to NaT\n",
     "    date_series = pd.to_datetime(series, format='%Y-%m-%d', errors='coerce')\n",
     "    if date_series.isna().any():\n",
-    "        logging.error('invalid dates in {!r}: {}'.format(col, \n",
-    "                                                         series[date_series.isna()].unique()))\n",
+    "        logging.error(f'invalid dates in {col}, SERIES {index_ranges(date_series[date_series.isna()])}: '\n",
+    "                      f'{series[date_series.isna()].unique()}')\n",
     "    valid_date_series = date_series[~date_series.isna()]\n",
     "    \n",
     "    # dates in future\n",
     "    future_dates = (valid_date_series > datetime.datetime.today())\n",
     "    if future_dates.any():\n",
-    "        logging.error('future dates in {!r}: {}'.format(col,\n",
-    "            valid_date_series[future_dates].to_list()))\n",
+    "        logging.error(f'future dates in {col}, SERIES {index_ranges(valid_date_series[future_dates])}: '\n",
+    "                      f'{valid_date_series[future_dates].to_list()}')\n",
     "        \n",
     "    # dates too old\n",
     "    old_dates = (valid_date_series < datetime.datetime.strptime('1900-01-01', '%Y-%m-%d'))\n",
     "    if old_dates.any():\n",
-    "        logging.error(\"pre-1900 dates in {!r}: {}\".format(col,\n",
-    "            valid_date_series[old_dates].to_list()))\n",
+    "        logging.error(f'pre-1900 dates in {col}, SERIES {index_ranges(valid_date_series[old_dates])}: '\n",
+    "                      f'{valid_date_series[old_dates].to_list()}')\n",
     "    \n",
     "    return valid_date_series\n",
     "\n",
@@ -534,8 +534,10 @@
     "    # NB empty string converted to NaT\n",
     "    time_series = pd.to_datetime(series, format='%H:%M:%S', errors='coerce')\n",
     "    if time_series.isna().any():\n",
-    "        logging.error('invalid times in {!r}: {}'.format(col, \n",
-    "                                                         series[time_series.isna()].unique()))\n",
+    "        logging.error(\n",
+    "            f'invalid times in {col}, SERIES {index_ranges(time_series[time_series.isna()])}: '\n",
+    "            f'{series[time_series.isna()].unique()}'\n",
+    "        )\n",
     "    valid_time_series = time_series[~time_series.isna()]\n",
     "    \n",
     "    return valid_time_series\n",
@@ -581,8 +583,10 @@
     "            return np.nan\n",
     "    time_period_series = series.apply(convert_iso_duration)\n",
     "    if time_period_series.isna().any():\n",
-    "        logging.error('invalid times in {!r}: {}'.format(col, \n",
-    "            series[time_period_series.isna()].unique()))\n",
+    "        logging.error(\n",
+    "            f'invalid times in {col}, SERIES {index_ranges(time_period_series[time_period_series.isna()])}: '\n",
+    "            f'{series[time_period_series.isna()].unique()}'\n",
+    "        )\n",
     "    valid_time_period_series = time_period_series[~time_period_series.isna()]\n",
     "    return valid_time_period_series\n",
     "\n",
@@ -643,13 +647,20 @@
     "                lat, lon = c.split(', ')\n",
     "                lat, lon = float(lat), float(lon)\n",
     "            except:\n",
-    "                logging.error('problem parsing coordinates {!r}'.format(c))\n",
+    "                unparsed_df = df[(df[lat_col] == str(lat)) & df[lon_col] == str(lon)]\n",
+    "                logging.error(\n",
+    "                    f'problem parsing coordinates {c} at SERIES {index_ranges(unparsed_df)}'\n",
+    "                )\n",
     "                continue\n",
     "            if abs(lat) > 90:\n",
-    "                logging.error('invalid latitude {}, should be in [-90,90]'.format(lat))\n",
+    "                logging.error(\n",
+    "                    f'invalid latitude {lat} at SERIES {index_ranges(df[df[lat_col] == str(lat)])}'\n",
+    "                    f', should be in [-90,90]')\n",
     "                continue\n",
     "            if abs(lon) > 180:\n",
-    "                logging.error('invalid longitude {}, should be in [-180,180]'.format(lon))\n",
+    "                logging.error(\n",
+    "                    f'invalid longitude {lon} at SERIES {index_ranges(df[df[lon_col] == str(lon)])}'\n",
+    "                    f', should be in [-180,180]')\n",
     "                continue\n",
     "            # web query\n",
     "            location = rgeocode(c, language='en-gb')\n",
@@ -666,25 +677,30 @@
     "    # extract countries from location data\n",
     "    loc_countries = dict()\n",
     "    for coord in locations.keys():\n",
+    "        \n",
+    "        lat, lon = coord.split(', ')\n",
+    "        coord_series = index_ranges(df.query(f'({lat_col} == \"{lat}\") & ({lon_col} == \"{lon}\")'))\n",
+    "                    \n",
     "        coord_country = locations[coord]['address']['country'].upper()\n",
     "        loc_countries[coord] = coord_country\n",
     "        \n",
     "        partner_countries = loc_df_complete.loc[loc_df_complete.coord == coord, 'partner_country']\n",
     "        if partner_countries.nunique() > 1:\n",
-    "            logging.error('multiple partner countries for coordinates {!r}: {}'\n",
-    "                          'skipping coordinate validation'.format(\n",
-    "                                coord, partner_countries.unique()))\n",
+    "            logging.error(\n",
+    "                f'multiple partner countries for coordinates {coord}, SERIES {coord_series}: '\n",
+    "                f'{partner_countries.unique()}, skipping coordinate validation'\n",
+    "            )\n",
     "            continue\n",
     "        if partner_countries.shape[0] == 0:\n",
-    "            logging.error('no partner location found for coordinates {!r}'.format(coord))\n",
+    "            logging.error(f'no partner location found for coordinates {coord}, SERIES {coord_series}')\n",
     "            continue\n",
     "        partner_country = partner_countries.iloc[0]\n",
     "        if coord_country == 'UNKNOWN':\n",
-    "            logging.warning('could not locate country for coordinates {!r}, partner country {!r}'.format(\n",
-    "                    coord, partner_country))\n",
+    "            logging.warning(f'could not locate country for coordinates {coord}, '\n",
+    "                            f'partner country {partner_country}, SERIES {coord_series}')\n",
     "        elif partner_country != coord_country:\n",
-    "            logging.error('country mismatch for coordinates {!r}, partner country {!r}, '\n",
-    "                          'coordinate country {!r}'.format(coord, partner_country, coord_country))\n",
+    "            logging.error(f'country mismatch for coordinates {coord}, partner country {partner_country}, '\n",
+    "                          'coordinate country {coord_country}, SERIES {coord_series}')\n",
     "    \n",
     "    # countries based on coordinates\n",
     "    loc_df_complete['coord_country'] = loc_df_complete['coord'].replace(loc_countries)\n",
@@ -757,7 +773,9 @@
     "                continue\n",
     "            corr_tax_name = tax_name[0].upper() + tax_name[1:].lower()\n",
     "            if corr_tax_name != tax_name and tax_name != 'blank sample':\n",
-    "                logging.error(f'{tax_level}: unexpected case for \"{tax_name}\", '\n",
+    "                s = index_ranges(df.query(f'{tax_col} == {tax_name}'))\n",
+    "                logging.error(f'{tax_level}, SERIES {s}'\n",
+    "                              f': unexpected case for \"{tax_name}\", '\n",
     "                              f'changing to \"{corr_tax_name}\" for validation')\n",
     "            tax_names[i] = corr_tax_name\n",
     "        \n",
@@ -767,10 +785,13 @@
     "        if len(unmatched_names) > 0:\n",
     "            if tax_level == 'species' and anospp:\n",
     "                for sp in unmatched_names:\n",
+    "                    s = index_ranges(df.query(f'{tax_col} == \"{sp}\"'))\n",
     "                    if sp in harbach_spp:\n",
-    "                        logging.warning(f'{tax_level}: \"{sp}\" found in Harbach list, but not in NCBI Taxonomy')\n",
+    "                        logging.warning(f'{tax_level}, SERIES {s}:'\n",
+    "                                        f' \"{sp}\" found in Harbach list, but not in NCBI Taxonomy')\n",
     "                    else:\n",
-    "                        logging.error(f'{tax_level}: \"{sp}\" not found in both Harbach list and NCBI Taxonomy')\n",
+    "                        logging.error(f'{tax_level}, SERIES {s}'\n",
+    "                                      f': \"{sp}\" not found in both Harbach list and NCBI Taxonomy')\n",
     "            else:\n",
     "                logging.error(f'{tax_level}: {unmatched_names} not found in NCBI Taxonomy')\n",
     "        \n",
@@ -818,8 +839,11 @@
     "            \n",
     "            family_lineage = ncbi.get_lineage(family_id)\n",
     "            \n",
+    "            s = index_ranges(df.query(f'PREDICTED_FAMILY == \"{r.family}\"'))\n",
+    "            \n",
     "            if order_id not in family_lineage:\n",
-    "                logging.error(f'Family {r.family} (taxid {family_id}) does not belong to {r.order} (taxid {order_id})')\n",
+    "                logging.error(f'SERIES {s}: '\n",
+    "                              f'family {r.family} (taxid {family_id}) does not belong to {r.order} (taxid {order_id})')\n",
     "        except KeyError:\n",
     "            logging.info(f'cannot validate PREDICTED_FAMILY for \"{r.family}\", skipping taxonomy consistency check')\n",
     "            continue\n",
@@ -831,10 +855,16 @@
     "            \n",
     "            genus_lineage = ncbi.get_lineage(genus_id)\n",
     "            \n",
+    "            s = index_ranges(df.query(f'PREDICTED_GENUS == \"{r.genus}\"'))\n",
+    "            \n",
     "            if order_id not in genus_lineage:\n",
-    "                logging.error(f'Genus {r.genus} (taxid {genus_id}) does not belong to {r.order} (taxid {order_id})')\n",
+    "                logging.error(\n",
+    "                    f'SERIES {s}: '\n",
+    "                    f'genus {r.genus} (taxid {genus_id}) does not belong to {r.order} (taxid {order_id})')\n",
     "            if family_id not in genus_lineage:\n",
-    "                logging.error(f'Genus {r.genus} (taxid {genus_id}) does not belong to {r.family} (taxid {family_id})')\n",
+    "                logging.error(\n",
+    "                    f'SERIES {s}: '\n",
+    "                    f'genus {r.genus} (taxid {genus_id}) does not belong to {r.family} (taxid {family_id})')\n",
     "        except KeyError:\n",
     "            logging.info(f'cannot validate PREDICTED_GENUS for \"{r.genus}\", skipping taxonomy consistency check')\n",
     "            continue\n",
@@ -846,12 +876,20 @@
     "            \n",
     "            species_lineage = ncbi.get_lineage(species_id)\n",
     "            \n",
+    "            s = index_ranges(df.query(f'PREDICTED_SCIENTIFIC_NAME == \"{r.species}\"'))\n",
+    "            \n",
     "            if order_id not in species_lineage:\n",
-    "                logging.error(f'Species {r.species} (taxid {species_id}) does not belong to {r.order} (taxid {order_id})')\n",
+    "                logging.error(\n",
+    "                    f'SERIES {s}: '\n",
+    "                    f'species {r.species} (taxid {species_id}) does not belong to {r.order} (taxid {order_id})')\n",
     "            if family_id not in species_lineage:\n",
-    "                logging.error(f'Species {r.species} (taxid {species_id}) does not belong to {r.family} (taxid {family_id})')\n",
+    "                logging.error(\n",
+    "                    f'SERIES {s}: '\n",
+    "                    f'species {r.species} (taxid {species_id}) does not belong to {r.family} (taxid {family_id})')\n",
     "            if genus_id not in species_lineage:\n",
-    "                logging.error(f'Species {r.species} (taxid {species_id}) does not belong to {r.family} (taxid {genus_id})')\n",
+    "                logging.error(\n",
+    "                    f'SERIES {s}: '\n",
+    "                    f'species {r.species} (taxid {species_id}) does not belong to {r.family} (taxid {genus_id})')\n",
     "        except KeyError:\n",
     "            logging.info(f'cannot validate PREDICTED_SCIENTIFIC_NAME for \"{r.species}\", skipping taxonomy consistency check')\n",
     "            continue\n",
@@ -909,7 +947,10 @@
     "        try:\n",
     "            float(val)\n",
     "        except:\n",
-    "            logging.error(f'found non-numeric value in {col}: \"{val}\"')\n",
+    "            s = index_ranges(df.query(f'{col} == \"{val}\"'))\n",
+    "            logging.error(\n",
+    "                f'SERIES {s}: '\n",
+    "                f'found non-numeric value in {col}: \"{val}\"')\n",
     "            \n",
     "            \n",
     "# validate_float('ELEVATION', df, na_values=[''])"
