add series to valid values error msg

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -149,25 +149,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 28.06.2023 - antivec samples.xlsx'\n",
+    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 28.06.2023 - ivm study samples.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9d3afc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 27.06.2023 - historical samples.xlsx'\n",
-    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8d6ae96",
+   "id": "88b73a1b",
    "metadata": {},
    "outputs": [],
    "source": []
