--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -460,7 +460,11 @@
     "    invalid_values = col_values - valid_values\n",
     "    \n",
     "    if len(invalid_values) > 0:\n",
-    "        msg = f'invalid values in {col}: {invalid_values}'\n",
+    "        if sep:\n",
+    "            invalid_value_series = index_ranges(series[series.str.contains('|'.join(invalid_values), regex=True)])\n",
+    "        else:\n",
+    "            invalid_value_series = index_ranges(series[series.isin(invalid_values)])\n",
+    "        msg = f'invalid values in {col}, SERIES {invalid_value_series}: {invalid_values}'\n",
     "        if level == 'i':\n",
     "            logging.info(msg)\n",
     "        elif level == 'w':\n",
