adjust well error messages

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -370,8 +370,14 @@
     "        observed_wells_set = set(pdf[well_col])\n",
     "        expected_wells_set = set(expected_wells)\n",
     "        if observed_wells_set != expected_wells_set:\n",
-    "            logging.error(f'in {well_col} for plate {plate}, wells {expected_wells_set - observed_wells_set} '\n",
-    "                          f'are missing, wells {observed_wells_set - expected_wells_set} are excessive')\n",
+    "            msg = f'in {well_col} for plate {plate}, '\n",
+    "            if len(expected_wells_set - observed_wells_set) > 0:\n",
+    "                msg += f'wells {expected_wells_set - observed_wells_set} are missing'\n",
+    "            if len(observed_wells_set - expected_wells_set) > 0:\n",
+    "                if msg.endswith('missing'):\n",
+    "                    msg += ', '\n",
+    "                msg += f'wells {observed_wells_set - expected_wells_set} are excessive'\n",
+    "            logging.error(msg)\n",
     "        pdfs.append(pdf)\n",
     "    \n",
     "    if bioscan and (df[well_col] == 'PLATE_ONLY').any():\n",
