harbach spp extend, fix logging

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -106,7 +106,7 @@
     "    validate_float('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
     "    validate_float('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
     "            \n",
-    "    logging.warning('# ended started validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
+    "    logging.warning('# ended validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
     "\n",
     "    # TODO yield table ready for STS submission\n",
     "    return df"
@@ -149,14 +149,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230628_olaitan/Anopheles_Metadata_Manifest_V4.0_EKUW - 28.06.2023 - ivm study samples.xlsx'\n",
+    "fn = '../results/20230710_misc/Manifest-MADAGASCAR  2023 (2).xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b73a1b",
+   "id": "73c3d0aa",
    "metadata": {},
    "outputs": [],
    "source": []
