series validation at the beginning

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -41,6 +41,8 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    # validate series, exclude non-numeric\n",
+    "    df = validate_series(df)\n",
     "    # clean up data\n",
     "    df = remove_trailing_spaces(df)\n",
     "    df = remove_nonbreaking_spaces(df)\n",
@@ -59,8 +61,6 @@
     "    # orange cols\n",
     "    # RACK_OR_PLATE_ID, TUBE_OR_WELL_ID\n",
     "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
-    "    # check series\n",
-    "    df = validate_series(df)\n",
     "    # check blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
