--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -32,6 +32,8 @@
     "\n",
     "    # read data\n",
     "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    # check series, exclude non-numeric\n",
+    "    df = validate_series(df)\n",
     "    # clean up data\n",
     "    df = remove_trailing_spaces(df)\n",
     "    df = remove_nonbreaking_spaces(df)\n",
@@ -48,8 +50,6 @@
     "    # orange cols\n",
     "    validate_freetext('CATCH_LOT', df, na_values=[])\n",
     "    df = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
-    "    # check series\n",
-    "    df = validate_series(df)\n",
     "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
@@ -129,14 +129,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230217_b_plate/FACE_BIOSCAN_Manifest_20230215.xlsx'\n",
+    "fn = '../results/20230712_js_batch1/NEWI_2023_BIOSCAN_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ab3e92a",
+   "id": "a2d69a73",
    "metadata": {},
    "outputs": [],
    "source": []
