--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -140,8 +140,9 @@
    "outputs": [],
    "source": [
     "def index_ranges(df):\n",
+    "    \n",
     "    # based on https://stackoverflow.com/questions/4628333/converting-a-list-of-integers-into-range-in-python\n",
-    "    i = df.index.to_list()\n",
+    "    i = df.index.to_list()    \n",
     "    ranges = []\n",
     "    for a, b in itertools.groupby(enumerate(i), lambda pair: pair[1] - pair[0]):\n",
     "        b = list(b)\n",
@@ -783,7 +784,7 @@
     "                continue\n",
     "            corr_tax_name = tax_name[0].upper() + tax_name[1:].lower()\n",
     "            if corr_tax_name != tax_name and tax_name != 'blank sample':\n",
-    "                s = index_ranges(df.query(f'{tax_col} == {tax_name}'))\n",
+    "                s = index_ranges(df.query(f'{tax_col} == \"{tax_name}\"'))\n",
     "                logging.error(f'{tax_level}, SERIES {s}'\n",
     "                              f': unexpected case for \"{tax_name}\", '\n",
     "                              f'changing to \"{corr_tax_name}\" for validation')\n",
