anospp species and out/indoor ajustments to match sop

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -15,7 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
     "%run validate_partner_manifest_dev.ipynb"
    ]
   },
@@ -85,7 +84,7 @@
     "    validate_time('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
-    "    validate_values('OUTDOORS_INDOORS', df[~is_blank], valid_dict)\n",
+    "    validate_values('OUTDOORS_INDOORS', df[~is_blank], valid_dict, na_values = [''])\n",
     "    validate_freetext('DESCRIPTION_OF_COLLECTION_METHOD', df[~is_blank])\n",
     "    validate_freetext('PRESERVATION_APPROACH', df[~is_blank])\n",
     "    \n",
@@ -109,7 +108,10 @@
     "    logging.warning('# ended validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
     "\n",
     "    # TODO yield table ready for STS submission\n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
+    "template_fn = fn"
    ]
   },
   {
@@ -119,8 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
-    "template_fn = fn\n",
     "df = validate_anospp(fn, template_fn, verbose=True, samples_sheet='TAB 3 TEST Metadata Entry')"
    ]
   },
@@ -149,14 +149,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230710_misc/Manifest-MADAGASCAR  2023 (2).xlsx'\n",
-    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
+    "fn = '../results/20230725_aydi_akje_re/Manifest-MADAGASCAR  2023 II.xlsx'\n",
+    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributor')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73c3d0aa",
+   "id": "0ff01236",
    "metadata": {},
    "outputs": [],
    "source": []
