specimen id risk allow for blanks

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -76,7 +76,7 @@
     "    \n",
     "    # purple cols - validate non-blank samples only\n",
     "    validate_taxonomy(df, ncbi, anospp=True, na_values = [''])\n",
-    "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict)\n",
+    "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict, na_values = [''])\n",
     "    validate_specimen_id_risk(df)\n",
     "    validate_freetext('IDENTIFIED_HOW', df[~is_blank])\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict)\n",
