--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -933,7 +933,7 @@
     "    invalid_risk = ((df.PREDICTED_SCIENTIFIC_NAME == '') & (df.SPECIMEN_IDENTITY_RISK == 'N'))\n",
     "    \n",
     "    if invalid_risk.any():\n",
-    "        logging.error(f'SPECIMEN_IDENTITY_RISK should be Y in SERIES {index_ranges(df.loc[invalid_risk])}')\n",
+    "        logging.error(f'SPECIMEN_IDENTITY_RISK column values should be blank or \"Y\" in SERIES {index_ranges(df.loc[invalid_risk])}')\n",
     "\n",
     "# validate_specimen_id_risk(df)"
    ]
