introduce debug, clarify most logging messages - wip

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -69,6 +69,8 @@
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    # columns below validated for non-blank samples only\n",
     "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_float('DECIMAL_LATITUDE', df)\n",
+    "    validate_float('DECIMAL_LONGITUDE', df)\n",
     "    # COLLECTION_COUNTRY, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
     "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''])\n",
     "    # COLLECTION_LOCATION not checked\n",
