--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -60,6 +60,8 @@
     "    # columns below validated for non-blank samples only\n",
     "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict)\n",
     "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_float('DECIMAL_LATITUDE', df)\n",
+    "    validate_float('DECIMAL_LONGITUDE', df)\n",
     "    # COUNTRY_OF_COLLECTION, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
     "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''], bioscan=True)\n",
     "    # COLLECTION_LOCATION not checked\n",
