finalise error messages cleaning, fix trailing nbsp removal and taxonomy case matching

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -43,8 +43,8 @@
     "    # validate series, exclude non-numeric\n",
     "    df = validate_series(df)\n",
     "    # clean up data\n",
-    "    df = remove_trailing_spaces(df)\n",
     "    df = remove_nonbreaking_spaces(df)\n",
+    "    df = remove_trailing_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
     "    ncbi = ete3.NCBITaxa()\n",
@@ -69,8 +69,8 @@
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    # columns below validated for non-blank samples only\n",
     "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    validate_float('DECIMAL_LATITUDE', df)\n",
-    "    validate_float('DECIMAL_LONGITUDE', df)\n",
+    "    validate_float('DECIMAL_LATITUDE', df[~is_blank])\n",
+    "    validate_float('DECIMAL_LONGITUDE', df[~is_blank])\n",
     "    # COLLECTION_COUNTRY, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
     "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''])\n",
     "    # COLLECTION_LOCATION not checked\n",
