--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "230f6339",
+   "id": "0377d185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
     "    # check series, exclude non-numeric\n",
     "    df = validate_series(df)\n",
     "    # clean up data\n",
-    "    df = remove_trailing_spaces(df)\n",
     "    df = remove_nonbreaking_spaces(df)\n",
+    "    df = remove_trailing_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
     "    ncbi = ete3.NCBITaxa()\n",
@@ -60,8 +60,8 @@
     "    # columns below validated for non-blank samples only\n",
     "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict)\n",
     "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
-    "    validate_float('DECIMAL_LATITUDE', df)\n",
-    "    validate_float('DECIMAL_LONGITUDE', df)\n",
+    "    validate_float('DECIMAL_LATITUDE', df[~is_blank])\n",
+    "    validate_float('DECIMAL_LONGITUDE', df[~is_blank])\n",
     "    # COUNTRY_OF_COLLECTION, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
     "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''], bioscan=True)\n",
     "    # COLLECTION_LOCATION not checked\n",
@@ -103,13 +103,21 @@
     "        \n",
     "    logging.warning('# ended validate_bioscan_partner_manifest_v.{}'.format(BIOSCAN_VERSION))\n",
     "\n",
-    "    return df\n",
-    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "230f6339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
     "                      gal='Sanger Institute',\n",
     "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20230217.xlsx', \n",
-    "                      verbose=True,\n",
+    "                      verbose=False,\n",
     "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met',\n",
     "                      write_sts=True)"
    ]
@@ -138,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d69a73",
+   "id": "cfea83ce",
    "metadata": {},
    "outputs": [],
    "source": []
