--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -792,7 +792,7 @@
     "        unmatched_names = set(tax_names) - set(tax_info[tax_level].keys())\n",
     "        if len(unmatched_names) > 0:\n",
     "            for tname in unmatched_names:\n",
-    "                s = index_ranges(df.query(f'{tax_col} == \"{tname}\"'))\n",
+    "                s = index_ranges(df[df[tax_col].str.match(f'^{tname}$', case=False)])\n",
     "                if tax_level == 'species' and anospp:\n",
     "                    if tname in harbach_spp:\n",
     "                        logging.warning(f'{tax_col} column, SERIES {s}:'\n",
@@ -801,7 +801,7 @@
     "                        logging.error(f'{tax_col} column, SERIES {s}'\n",
     "                                      f': \"{tname}\" not found in both Harbach list and NCBI Taxonomy')\n",
     "                else:\n",
-    "                    logging.error(f'{tax_col} column, SERIES {s}: {tname} not found in NCBI Taxonomy')\n",
+    "                    logging.error(f'{tax_col} column, SERIES {s}: \"{tname}\" not found in NCBI Taxonomy')\n",
     "        \n",
     "        expected_rank = tax_level\n",
     "        \n",
@@ -811,8 +811,8 @@
     "            \n",
     "            upd_tid = tids[0]\n",
     "            \n",
-    "            s = index_ranges(df.query(f'{tax_col} == \"{tname}\"'))\n",
-    "            \n",
+    "            s = index_ranges(df[df[tax_col].str.match(f'^{tname}$', case=False)])\n",
+    "                        \n",
     "            if len(tids) == 1:\n",
     "                if ranks[upd_tid] != expected_rank: \n",
     "                    # TODO warning->info for ORDER\n",
@@ -857,7 +857,7 @@
     "            \n",
     "            family_lineage = ncbi.get_lineage(family_id)\n",
     "            \n",
-    "            s = index_ranges(df.query(f'PREDICTED_FAMILY == \"{r.family}\"'))\n",
+    "            s = index_ranges(df[df['PREDICTED_FAMILY'].str.match(f'^{r.family}$', case=False)])\n",
     "            \n",
     "            if order_id not in family_lineage:\n",
     "                logging.error(f'PREDICTED_FAMILY column, SERIES {s}: family \"{r.family}\" (taxid {family_id}) '\n",
@@ -874,7 +874,7 @@
     "            \n",
     "            genus_lineage = ncbi.get_lineage(genus_id)\n",
     "            \n",
-    "            s = index_ranges(df.query(f'PREDICTED_GENUS == \"{r.genus}\"'))\n",
+    "            s = index_ranges(df[df['PREDICTED_GENUS'].str.match(f'^{r.genus}$', case=False)])\n",
     "            \n",
     "            if order_id not in genus_lineage:\n",
     "                logging.error(\n",
@@ -896,7 +896,7 @@
     "            \n",
     "            species_lineage = ncbi.get_lineage(species_id)\n",
     "            \n",
-    "            s = index_ranges(df.query(f'PREDICTED_SCIENTIFIC_NAME == \"{r.species}\"'))\n",
+    "            s = index_ranges(df[df['PREDICTED_SCIENTIFIC_NAME'].str.match(f'^{r.species}$', case=False)])\n",
     "            \n",
     "            if order_id not in species_lineage:\n",
     "                logging.error(\n",
@@ -933,7 +933,7 @@
    "source": [
     "def validate_specimen_id_risk(df):\n",
     "    \n",
-    "    logging.info(f'validating SPECIMEN_IDENTITY_RISK column')\n",
+    "    logging.debug(f'validating SPECIMEN_IDENTITY_RISK column')\n",
     "    \n",
     "    if 'SPECIMEN_IDENTITY_RISK' not in df.columns:\n",
     "        logging.error(f'SPECIMEN_IDENTITY_RISK column not found in manifest')\n",
@@ -988,7 +988,7 @@
    "source": [
     "def validate_freetext(col, df, na_values=['']):\n",
     "    \n",
-    "    logging.debug(f'validating freetext chars in {col}')\n",
+    "    logging.debug(f'validating freetext field characters in {col} column')\n",
     "    \n",
     "    if col not in df.columns:\n",
     "        logging.error(f'{col} column not found in manifest')\n",
@@ -1001,7 +1001,7 @@
     "    is_valid_freetext = series.str.match(regex)\n",
     "    if not is_valid_freetext.all():\n",
     "        s = index_ranges(series.loc[~is_valid_freetext])\n",
-    "        logging.debug(f'found non-standard characters in {col} column, SERIES {s}. Regex: \"{regex}\"')\n",
+    "        logging.debug(f'{col} column, SERIES {s}: found non-standard characters - regex: \"{regex}\"')\n",
     "\n",
     "        \n",
     "# validate_freetext('IDENTIFIED_HOW', df)"
@@ -1025,7 +1025,7 @@
    "source": [
     "def compare_dates(before, after):\n",
     "        \n",
-    "    logging.debug(f'checking that {before.name} are earlier than {after.name}')\n",
+    "    logging.debug(f'checking that {before.name} is earlier than {after.name}')\n",
     "\n",
     "    ctdf = pd.concat([before, after], axis=1)\n",
     "    date_conflict = ctdf[before.name] > ctdf[after.name]\n",
