add validation version, adjust series messages

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -27,7 +27,8 @@
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.warning(f'# started validate_bioscan_partner_manifest_v.{BIOSCAN_VERSION}')\n",
+    "    logging.warning(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
+    "    logging.warning(f'# validating BIOSCAN manifest v.{BIOSCAN_VERSION}')\n",
     "    logging.warning(f'# manifest {fn}')\n",
     "\n",
     "    # read data\n",
