--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -113,19 +113,20 @@
     "    logging.debug('validating SERIES column')\n",
     "    \n",
     "    if df.index.duplicated().any():\n",
-    "        logging.error('duplicate SERIES values: {}'.format(df.index[df.index.duplicated()].to_list()))\n",
+    "        logging.error(f'duplicate SERIES column values: {df.index[df.index.duplicated()].to_list()}')\n",
     "    \n",
     "    # exclude non-numeric SERIES - these don't work with ranges\n",
     "    series_numeric = df.index.astype(str).str.isnumeric()\n",
     "    if not series_numeric.all():\n",
-    "        logging.error(f'found and excluded non-numeric SERIES values: {df.index[~series_numeric].to_list()}')\n",
+    "        logging.error(f'found and excluded rows with non-numeric SERIES column values: '\n",
+    "                      f'{df.index[~series_numeric].to_list()}')\n",
     "        df = df.loc[series_numeric]\n",
     "        \n",
     "    # check the remaining SERIES are continuous\n",
     "    expected_series = set([str(i) for i in range(1, df.shape[0] + 1)])\n",
     "    observed_series = set(df.index.astype(str))\n",
     "    if expected_series != observed_series:\n",
-    "        logging.error(f'SERIES values {sorted(list(expected_series - observed_series))} are missing, '\n",
+    "        logging.error(f'SERIES column values {sorted(list(expected_series - observed_series))} are missing, '\n",
     "                      f'{sorted(list(observed_series - expected_series))} are unexpected')\n",
     "        \n",
     "    return df\n",
