--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -35,7 +35,8 @@
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.warning(f'# started validate_anospp_partner_manifest_v.{ANOSPP_VERSION}')\n",
+    "    logging.warning(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
+    "    logging.warning(f'# validating ANOSPP manifest v.{ANOSPP_VERSION}')\n",
     "    logging.warning(f'# manifest {fn}')\n",
     "\n",
     "    # read data\n",
